package com.yonatankarp.flyweight

/**
 * Interface for Potions.
 */
internal interface Potion {
    fun drink()
}
