package com.yonatankarp.flyweight

/**
 * Enumeration for potion types.
 */
enum class PotionType {
    HEALING,
    HOLY_WATER,
    INVISIBILITY,
    POISON,
    STRENGTH,
;
}
