@startuml
package com.yonatankarp.flyweight {
  class AlchemistShop {
    - bottomShelf : List<Potion>
    - topShelf : List<Potion>
    + AlchemistShop()
    + enumerate()
    + getBottomShelf() : List<Potion>
    + getTopShelf() : List<Potion>
  }
  class App {
    - logger : Logger {static}
    + App()
    + main(args : String[]) {static}
  }
  class HealingPotion {
    + HealingPotion()
    + drink()
  }
  class HolyWaterPotion {
    + HolyWaterPotion()
    + drink()
  }
  class InvisibilityPotion {
    + InvisibilityPotion()
    + drink()
  }
  class PoisonPotion {
    + PoisonPotion()
    + drink()
  }
  interface Potion {
    + drink() {abstract}
  }
  class PotionFactory {
    - potions : Map<PotionType, Potion>
    + PotionFactory()
    ~ createPotion(type : PotionType) : Potion
  }
  enum PotionType {
    + HEALING {static}
    + HOLY_WATER {static}
    + INVISIBILITY {static}
    + POISON {static}
    + STRENGTH {static}
    + valueOf(name : String) : PotionType {static}
    + values() : PotionType[] {static}
  }
  class StrengthPotion {
    + StrengthPotion()
    + drink()
  }
}
AlchemistShop -->  "-topShelf" Potion
HealingPotion ..|> Potion
HolyWaterPotion ..|> Potion
InvisibilityPotion ..|> Potion
PoisonPotion ..|> Potion
StrengthPotion ..|> Potion
@enduml
